# snekframe

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/: CODEOWNERS
.github/workflows/: black.yml  pylint.yml
install/: snekframe.service  sudoer.photoframe  sudoer.snekframe
photo_display_gui/: analyse.py  db.py  fonts.py  main.py  params.py  photowindow.py  settings.py
snekframe/: analyse.py  db.py  elements.py  fonts.py  icons.py  main.py  params.py  photowindow.py  settings.py  styles.py
snekframe/db/: __init__.py  _base.py  _current.py  _v0.py  _v1.py  runtime.py  startup.py  upgrade.py  version.py
snekframe/photos/: container.py  display.py  gallery.py  main.py  title.py
