[metadata]
name = photo_display_gui
version = 0.0.1

[options]
install_requires =
    sqlalchemy
    pillow
    filetype
#include_package_data = True
packages = find:

[options.packages.find]
where=.
include=photo_display_gui*

[options.entry_points]
console_scripts =
    photo_display_gui_run = photo_display_gui.main:main

